feat: Complete refactor of code to support full modularity

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,11 @@ venv/
 *.ram
 *.state
 *.pth
-experiments/logs/
+experiments/
 states/
+summaries/
+tests/
+.claude/
 
 # File Ignores
 extract_maps.py
